--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -234,7 +234,7 @@ Our first question is, whether the words used the in the associative paradigm is
 \hypertarget{morality-as-a-social-categorization}{%
 \subsection{Morality as a social-categorization?}\label{morality-as-a-social-categorization}}
 
-{[}possible explanations: person-based self-categorization vs.~stimuli-based valence{]} The robust pattern from the first four experiments revealed a novel pattern that needs an explanation. It's novel because it's contradict with the ``negative is stronger than positive'' hypothesis in social psychology (Baumeister, Bratslavsky, Finkenauer, \& Vohs, 2001). There are two major alternatives. One possible explanation is the value-based attention, which suggested that valuable stimuli is prioritized in our low-level cognitive processes. Because positive moral character is potentially rewarding, e.g., potential cooperators, it is valuable to individuals and therefore being prioritized. Most empirical evidence for value-based attention are from experiments used monetary reward. However, the monetary reward might be different greatly from the morality in social setting. So far, only a few empirical studies supported the value-based attention in social evaluation. XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. Applying this explanation to the current setting need a further assumption that participants automatically view the moral character related information as self-relevant objects. Only based on the objectified stimuli that we evaluate their value (rewarding or threatening) to us (Juechems \& Summerfield, 2019; Reicher \& Hopkins, 2016).
+{[}possible explanations: person-based self-categorization vs.~stimuli-based valence{]} The robust pattern from the first four experiments revealed a novel pattern that needs an explanation. It's novel because it's contradict with the ``negative is stronger than positive'' hypothesis in social psychology (Baumeister, Bratslavsky, Finkenauer, \& Vohs, 2001). There are two major alternatives. One possible explanation is the value-based attention, which suggested that valuable stimuli is prioritized in our low-level cognitive processes. Because positive moral character is potentially rewarding, e.g., potential cooperators, it is valuable to individuals and therefore being prioritized. Most empirical evidence for value-based attention are from experiments used monetary reward. However, the monetary reward might be different greatly from the morality in social setting. So far, only a few empirical studies supported the value-based attention in social evaluation. Eiserbeck and Abdel Rahman (2020) and Shore and Heerey (2013) found that neutral faces, after associated with trustworthy behavioral description or trustworthy interaction history, attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. Applying this explanation to the current setting need a further assumption that participants automatically view the moral character related information as self-relevant objects. Only based on the objectified stimuli that we evaluate their value (rewarding or threatening) to us (Juechems \& Summerfield, 2019; Reicher \& Hopkins, 2016).
 
 Another possibility is that we will perceive those moral character not as objects but as person, and automatic categorize whether they are in-group or out-group, instead of calculating their value to us. This account assumed that moral character served as a way to categorize other. In the first four experiments' situation, the identity of the moral character is ambiguous, participants may automatically categorize morally good people as in-group (as an extension of themselves) and therefore preferentially processed these information.
 
@@ -472,7 +472,7 @@ In this part, we reported two studies in which the moral valence or the self-ref
 
 For the task relevant part, we found self-related conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times.
 
-Most importantly, we found evidence, albeit weak, that task-irrelevant moral valence also played an role. The \emph{d} prime is greater when shapes were associated with good self condition than with neutral self (BF = 4.4) or bad self (3.1), but shapes associated with bad self and neutral self didn't show differences. See Figure \ref{fig:plot-exp4a-BGLM}.
+Most importantly, we found evidence, albeit weak, that task-irrelevant moral valence also played an role. The \emph{d} prime is greater when shapes were associated with good self condition than with neutral self (BF = 4.4) or bad self (3.1), but shapes associated with bad self and neutral self didn't show differences. In contrast the \emph{d} prime was smaller when shapes were associated with good other than with neutral other or bad other. See Figure \ref{fig:plot-exp4a-BGLM}.
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
@@ -558,6 +558,9 @@ Carpenter, B., Gelman, A., Hoffman, M. D., Lee, D., Goodrich, B., Betancourt, M.
 \leavevmode\hypertarget{ref-dang_why_2020}{}%
 Dang, J., King, K. M., \& Inzlicht, M. (2020). Why are self-report and behavioral measures weakly correlated? \emph{Trends in Cognitive Sciences}, \emph{24}(4), 267--269. \url{https://doi.org/10.1016/j.tics.2020.01.007}
 
+\leavevmode\hypertarget{ref-eiserbeck_visual_2020}{}%
+Eiserbeck, A., \& Abdel Rahman, R. (2020). Visual consciousness of faces in the attentional blink: Knowledge-based effects of trustworthiness dominate over appearance-based impressions. \emph{Consciousness and Cognition}, \emph{83}, 102977. \url{https://doi.org/10.1016/j.concog.2020.102977}
+
 \leavevmode\hypertarget{ref-ellemers_psychology_2019}{}%
 Ellemers, N., Toorn, J. van der, Paunov, Y., \& Leeuwen, T. van. (2019). The psychology of morality: A review and analysis of empirical studies published from 1940 through 2017. \emph{Personality and Social Psychology Review}, \emph{23}(4), 332--366. \url{https://doi.org/10.1177/1088868318811759}
 
@@ -629,6 +632,9 @@ Rouder, J. N., \& Lu, J. (2005). An introduction to bayesian hierarchical models
 
 \leavevmode\hypertarget{ref-Rousselet_2019}{}%
 Rousselet, G. A., \& Wilcox, R. R. (2019). Reaction times and other skewed distributions: Problems with the mean and the median {[}Preprint{]}. \emph{Meta-Psychology}. \url{https://doi.org/10.1101/383935}
+
+\leavevmode\hypertarget{ref-shore_social_2013}{}%
+Shore, D. M., \& Heerey, E. A. (2013). Do social utility judgments influence attentional processing? \emph{Cognition}, \emph{129}(1), 114--122. \url{https://doi.org/10.1016/j.cognition.2013.06.011}
 
 \leavevmode\hypertarget{ref-Simmons_2013_life}{}%
 Simmons, J. P., Nelson, L. D., \& Simonsohn, U. (2013). \emph{Life after p-hacking} {[}Conference Proceedings{]}. \url{https://doi.org/10.2139/ssrn.2205186}
