--- a/endnote.bib
+++ b/endnote.bib
@@ -1308,3 +1308,41 @@ Publisher: American Psychological Association},
 	date = {2001-12-01},
 	langid = {english}
 }
+
+
+@article{eiserbeck_visual_2020,
+	title = {Visual consciousness of faces in the attentional blink: Knowledge-based effects of trustworthiness dominate over appearance-based impressions},
+	volume = {83},
+	issn = {1053-8100},
+	url = {https://www.sciencedirect.com/science/article/pii/S1053810020301033},
+	doi = {10.1016/j.concog.2020.102977},
+	shorttitle = {Visual consciousness of faces in the attentional blink},
+	abstract = {How we perceive and evaluate other persons depends on appearance-based impressions as well as top-down information such as knowledge about someone’s character. To date, little is known about how these two sources of information affect the conscious perception of faces, about their relative contributions and possible interactions. Here, we directly compare how social-affective knowledge and visual cues of trustworthiness impact the access of faces to visual consciousness. Low- and average-trustworthy looking faces were associated with neutral or negative information about a person’s social behavior. Trustworthiness and facial expression ratings showed robust and independent effects of both sources of information during evaluations. Under conditions of reduced attention in an attentional blink task, prioritized detection of faces associated with negative as compared to neutral person knowledge was observed, whereas facial trustworthiness did not affect detection. Thus, while both factors influenced conscious perception and evaluation, only person knowledge impacted the access to consciousness.},
+	pages = {102977},
+	journaltitle = {Consciousness and Cognition},
+	shortjournal = {Consciousness and Cognition},
+	author = {Eiserbeck, Anna and Abdel Rahman, Rasha},
+	urldate = {2021-03-05},
+	date = {2020-08-01},
+	langid = {english},
+	keywords = {Affective knowledge, Attentional blink, Facial appearance, Person evaluation, Trustworthiness}
+}
+
+
+@article{shore_social_2013,
+	title = {Do social utility judgments influence attentional processing?},
+	volume = {129},
+	issn = {0010-0277},
+	url = {https://www.sciencedirect.com/science/article/pii/S0010027713001236},
+	doi = {10.1016/j.cognition.2013.06.011},
+	abstract = {Research shows that social judgments influence decision-making in social environments. For example, judgments about an interaction partners’ trustworthiness affect a variety of social behaviors and decisions. One mechanism by which social judgments may influence social decisions is by biasing the automatic allocation of attention toward certain social partners, thereby shaping the information people acquire. Using an attentional blink paradigm, we investigate how trustworthiness judgments alter the allocation of attention to social stimuli in a set of two experiments. The first experiment investigates trustworthiness judgments based solely on a social partner’s facial appearance. The second experiment examines the effect of trustworthiness judgments based on experienced behavior. In the first, strong appearance-based judgments (positive and negative) enhanced stimulus recognizability but did not alter the size of the attentional blink, suggesting that appearance-based social judgments enhance face memory but do not affect pre-attentive processing. However, in the second experiment, in which judgments were based on behavioral experience rather than appearance, positive judgments enhanced pre-attentive processing of trustworthy faces. This suggests that a stimulus’s potential benefits, rather than its disadvantages, shape the automatic distribution of attentional resources. These results have implications for understanding how appearance- and behavior-based social cues shape attention distribution in social environments.},
+	pages = {114--122},
+	number = {1},
+	journaltitle = {Cognition},
+	shortjournal = {Cognition},
+	author = {Shore, Danielle M. and Heerey, Erin A.},
+	urldate = {2021-03-05},
+	date = {2013-10-01},
+	langid = {english},
+	keywords = {Attentional blink, Social judgments, Trustworthiness, Utility}
+}
