--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1811,9 +1811,245 @@ For the task relevant part, we found self-related conditions were performed bett
 
 Most importantly, we found evidence, albeit weak, that task-irrelevant moral valence also played an role. The *d* prime is greater when shapes were associated with good self condition than with neutral self (BF = 4.4) or bad self (3.1), but shapes associated with bad self and neutral self didn't show differences. In contrast the *d* prime was smaller when shapes were associated with good other than with neutral other or bad other. See Figure \@ref(fig:plot-exp4a-BGLM).
 
+```{r 4b_BGLMM_sdt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
+exp_name <- '4b'
+exp4b_sdt_m1 <- fun_sdt_val_id(exp_name)
 
-```{r child = "exp4b.rmd", eval=FALSE}
+# d-prime
+hypothesis(exp4b_sdt_m1, "IdentitySelf:ValenceGood:ismatch > IdentitySelf:ValenceNeutral:ismatch")     # .98
+hypothesis(exp4b_sdt_m1, "IdentitySelf:ValenceGood:ismatch > IdentitySelf:ValenceBad:ismatch")         # 1
+hypothesis(exp4b_sdt_m1, "IdentitySelf:ValenceNeutral:ismatch > IdentitySelf:ValenceBad:ismatch")      # .86
+hypothesis(exp4b_sdt_m1, "IdentityOther:ValenceGood:ismatch > IdentityOther:ValenceNeutral:ismatch")   # .91
+hypothesis(exp4b_sdt_m1, "IdentityOther:ValenceGood:ismatch > IdentityOther:ValenceBad:ismatch")       # .91
+hypothesis(exp4b_sdt_m1, "IdentityOther:ValenceNeutral:ismatch > IdentityOther:ValenceBad:ismatch")    # .65
+
+hypothesis(exp4b_sdt_m1, "IdentitySelf:ValenceGood:ismatch > IdentityOther:ValenceGood:ismatch")        # .92
+hypothesis(exp4b_sdt_m1, "IdentitySelf:ValenceNeutral:ismatch > IdentityOther:ValenceNeutral:ismatch")  # .67
+hypothesis(exp4b_sdt_m1, "IdentitySelf:ValenceBad:ismatch > IdentityOther:ValenceBad:ismatch")          # .29
+
+# extract the population level parameters
+# criteria
+
+df_exp4b_sdt_m1_plot <- exp4b_sdt_m1 %>%
+  tidybayes::gather_draws(`b_.*`, regex = TRUE) %>% # get the traces of population level parameters
+  # create two columns for two independent factors.
+  dplyr::mutate(Valence = dplyr::case_when(grepl("Neutral", .variable) ~ "Neutral",
+                                           grepl("Bad", .variable) ~"Bad",
+                                           grepl("Good", .variable) ~"Good"),
+                Identity = dplyr::case_when(grepl("Self", .variable) ~ "Self",
+                                           grepl("Other", .variable) ~"Other"),
+                params = dplyr::case_when(grepl("ismatch", .variable) ~ "dprime",
+                                           !grepl("ismatch", .variable) ~"criterion"),
+                params = factor(params, levels = c('dprime', 'criterion')),
+                Identity = factor(Identity, levels = c("Self", "Other")),
+                Valence = factor(Valence, levels = c('Good', 'Neutral',  'Bad'))) 
+
+exp4b_sdt_p <- df_exp4b_sdt_m1_plot %>%
+  dplyr::filter(params == 'dprime') %>%  # select only d prime
+  ggplot2::ggplot(aes(x = Valence, y = .value, color = Identity)) +
+  tidybayes::stat_halfeye(aes(fill = Identity), alpha = 0.7) + # position=position_dodge(width = 0.1)
+  stat_summary(aes(group = Identity, color = Identity), fun = mean, geom = "line") +
+  labs(x = expression("Valence"), 
+      y = expression(paste("Posteior of sensitivity ", italic("d'"), sep = ' '))) +
+  scale_colour_brewer(palette = "Dark2") +
+  scale_fill_brewer(palette = "Dark2") +
+  theme_classic() 
+
+df_exp4b_sdt_m1_plot_diff <- df_exp4b_sdt_m1_plot %>%
+        tidyr::unite(term, c('params', 'Identity', 'Valence')) %>%
+        dplyr::ungroup() %>%
+        dplyr::select(term, `.chain`, `.iteration`, `.draw`, `.value`) %>%
+        tidyr::pivot_wider(names_from = c(term), values_from = .value) %>%   # long to wide
+        dplyr::mutate(
+                diff_GN_dprm_S = dprime_Self_Good - dprime_Self_Neutral,
+                diff_BN_dprm_S = dprime_Self_Bad - dprime_Self_Neutral,
+                diff_GB_dprm_S = dprime_Self_Good - dprime_Self_Bad,
+                diff_GN_dprm_O = dprime_Other_Good - dprime_Other_Neutral,
+                diff_BN_dprm_O = dprime_Other_Bad - dprime_Other_Neutral,
+                diff_GB_dprm_O = dprime_Other_Good - dprime_Other_Bad,
+                diff_SO_dprm_G = dprime_Self_Good - dprime_Other_Good,
+                diff_SO_dprm_N =  dprime_Self_Neutral - dprime_Other_Neutral,
+                diff_SO_dprm_B =  dprime_Self_Bad - dprime_Other_Bad
+                ) %>%
+  dplyr::select(`.chain`, `.iteration`, `.draw`,
+               diff_GN_dprm_S, diff_BN_dprm_S, diff_GB_dprm_S,
+               diff_GN_dprm_O, diff_BN_dprm_O, diff_GB_dprm_O, 
+               diff_SO_dprm_G, diff_SO_dprm_N, diff_SO_dprm_B) %>%
+  tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_SO_dprm_B, names_to = "term_diff", values_to =  "value") %>%  # wide to long
+  dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GB_dprm_S', 'diff_GN_dprm_S', 'diff_BN_dprm_S', 
+                                                         'diff_GB_dprm_O', 'diff_GN_dprm_O', 'diff_BN_dprm_O', 
+                                                         'diff_SO_dprm_G', 'diff_SO_dprm_N', 'diff_SO_dprm_B')))
+p_exp4b_dprime1_diff_val <- df_exp4b_sdt_m1_plot_diff %>%
+        dplyr::filter(str_detect(term_diff, '_dprm_S|_dprm_O')) %>%
+        dplyr::mutate(Identity = dplyr::case_when(grepl("_S", term_diff) ~ "Self",
+                                           grepl("_O", term_diff) ~"Other"),
+                      Identity = factor(Identity, levels = c("Self", "Other"))) %>%
+        dplyr::mutate(term_diff = stringr::str_sub(.$term_diff, end = -8)) %>%
+        dplyr::mutate(term_diff = dplyr::case_when(grepl("_GB", term_diff) ~ "Good vs. Bad",
+                                                   grepl("_GN", term_diff) ~"Good vs. Neutral",
+                                                   grepl("_BN", term_diff) ~ "Bad vs. Neutral"),
+                      term_diff = factor(term_diff, levels = c("Good vs. Bad", "Good vs. Neutral", "Bad vs. Neutral"))) %>%
+        #dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
+        dplyr::rename(conditions = term_diff) %>%
+        ggplot2::ggplot(aes(x = value, y = fct_rev(conditions), fill = stat(x > 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('skyblue', 'gray80'),
+                    breaks = c(TRUE, FALSE),
+                    name = "Effect" , labels = c("Yes", "No")) + 
+        # scale_fill_manual(values = c('gray80', 'skyblue')) +
+        labs(x = expression(paste("Self-referential effect on ", italic("d"), " prime", sep = ' ')),
+             y = expression("Contrasts")) + 
+        facet_wrap( ~ Identity, nrow = 1)
+
+p_exp4b_dprime1_diff_id <- df_exp4b_sdt_m1_plot_diff %>%
+        dplyr::filter(str_detect(term_diff, '_SO_')) %>%
+        dplyr::mutate(term_diff = dplyr::case_when(grepl("_B", term_diff) ~ "Bad",
+                                                   grepl("_N", term_diff) ~"Neutral",
+                                                   grepl("_G", term_diff) ~ "Good"),
+                      term_diff = factor(term_diff, levels = c("Good", "Neutral", "Bad"))) %>%
+        #dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+        # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
+        dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
+        dplyr::rename(conditions = term_diff) %>%
+        ggplot2::ggplot(aes(x = value, y = fct_rev(conditions), fill = stat(x > 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('skyblue', 'gray80'),
+                    breaks = c(TRUE, FALSE),
+                    name = "Effect" , labels = c("Yes", "No")) +
+        # scale_fill_manual(values = c('skyblue')) +   # note: only one value here, used blue here
+        labs(x = expression(paste("Self-referential effect on ", italic("d"), " prime", sep = ' ')),
+             y = expression("Contrasts (Self vs. Other)"))
 ```
+
+```{r 4b_BGLMM_rt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
+exp_name <- '4b'
+exp4b_rt_m1 <- fun_rt_val_id(exp_name)
+
+df_exp4b_m1_plot_rt <- exp4b_rt_m1 %>%
+        tidybayes::gather_draws(`b_.*`, regex = TRUE)  %>%
+        dplyr::mutate(.variable = gsub("b_", "", .variable)) %>%
+        tidyr::pivot_wider(names_from = c(.variable), values_from = .value) %>%
+        dplyr::mutate(NM_Self_Neutral = Intercept,               # calculate the differences between conditions
+                      NM_Self_Bad = Intercept  + ValenceBad,
+                      NM_Self_Good = Intercept  + ValenceGood ,
+                      NM_Other_Neutral = Intercept  + IdentityOther,               # calculate the differences between conditions
+                      NM_Other_Bad = Intercept  + ValenceBad  + `IdentityOther:ValenceBad`,
+                      NM_Other_Good = Intercept  + ValenceGood + `IdentityOther:ValenceGood`,
+                      M_Self_Neutral = Intercept  + ismatch,
+                      M_Self_Bad = Intercept  + ismatch + `ismatch:ValenceBad`,
+                      M_Self_Good = Intercept  + ismatch + `ismatch:ValenceGood`,
+                      M_Other_Neutral = Intercept  + ismatch + `ismatch:IdentityOther`,
+                      M_Other_Bad = Intercept  + ismatch + `ismatch:IdentityOther` + `ismatch:IdentityOther:ValenceBad`,
+                      M_Other_Good = Intercept  + ismatch + `ismatch:IdentityOther` + `ismatch:IdentityOther:ValenceGood`) %>%
+        dplyr::select(`.chain`, `.iteration`, `.draw`, contains('M_')) %>%
+        tidyr::pivot_longer(cols = NM_Self_Neutral:M_Other_Good, names_to = "term", values_to =  "value") %>%  # wide to long
+  dplyr::mutate(term = factor(term, levels = c('NM_Self_Neutral', 'NM_Self_Bad', 'NM_Self_Good',
+                                               'NM_Other_Neutral', 'NM_Other_Bad', 'NM_Other_Good',
+                                               'M_Self_Neutral', 'M_Self_Bad', 'M_Self_Good',
+                                               'M_Other_Neutral', 'M_Other_Bad', 'M_Other_Good')),
+                value = exp(value),
+                value = value * 1000) 
+
+p_exp4b_rt1 <- df_exp4b_m1_plot_rt %>%
+        tidyr::separate(term, c('Match', 'Identity', 'Valence')) %>% 
+        dplyr::mutate(Valence = factor(Valence, levels = c('Good', 'Neutral', 'Bad')),
+                      Identity = factor(Identity, levels = c("Self", "Other"))) %>%
+        dplyr::filter(Match == 'M') %>%
+        # dplyr::rename(Experiments = condition) %>%
+        dplyr::filter((value >=200) & (value <=1200)) %>%
+        ggplot2::ggplot(aes(y = value, x = Valence, color = Identity)) +
+        tidybayes::stat_halfeye(aes(fill = Identity), alpha = 0.7) +
+        stat_summary(aes(group = Identity, color = Identity), fun = mean, geom = "line") +
+        # geom_vline(data = p_ms_rt1_vlines, aes(xintercept = value, colour = Valence), linetype = "dashed") +
+        labs(x = expression("Valence"), 
+             y = expression('Posteior of reaction times')) +
+        scale_colour_brewer(palette = "Dark2") +
+        scale_fill_brewer(palette = "Dark2") +
+        theme_classic()
+
+df_exp4b_m1_plot_rt_diff <- df_exp4b_m1_plot_rt %>%
+        # tidyr::unite(term, c('params', 'Identity', 'Valence')) %>%
+        dplyr::ungroup() %>%
+        dplyr::select(term, `.chain`, `.iteration`, `.draw`, `value`) %>%
+        tidyr::pivot_wider(names_from = c(term), values_from = value) %>%   # long to wide
+        dplyr::mutate(
+                diff_GN_S_RT_M = M_Self_Good - M_Self_Neutral,
+                diff_BN_S_RT_M = M_Self_Bad - M_Self_Neutral,
+                diff_GB_S_RT_M = M_Self_Good - M_Self_Bad,
+                diff_GN_O_RT_M = M_Other_Good - M_Other_Neutral,
+                diff_BN_O_RT_M = M_Other_Bad - M_Other_Neutral,
+                diff_GB_O_RT_M = M_Other_Good - M_Other_Bad,
+                diff_SO_G_RT_M = M_Self_Good - M_Other_Good,
+                diff_SO_N_RT_M = M_Self_Neutral - M_Other_Neutral,
+                diff_SO_B_RT_M = M_Self_Bad - M_Other_Bad
+                ) %>%
+  dplyr::select(`.chain`, `.iteration`, `.draw`,
+               diff_GN_S_RT_M:diff_SO_B_RT_M) %>%
+  tidyr::pivot_longer(cols = diff_GN_S_RT_M:diff_SO_B_RT_M, names_to = "term_diff", values_to =  "value") %>%  # wide to long
+  dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GN_S_RT_M', 'diff_BN_S_RT_M', 'diff_GB_S_RT_M', 
+                                                         'diff_GN_O_RT_M', 'diff_BN_O_RT_M', 'diff_GB_O_RT_M', 
+                                                         'diff_SO_G_RT_M', 'diff_SO_N_RT_M', 'diff_SO_B_RT_M')))
+p_exp4b_rt_diff_val <- df_exp4b_m1_plot_rt_diff %>%
+        dplyr::filter(str_detect(term_diff, '_S_RT_M|_O_RT_M')) %>%
+        dplyr::mutate(Identity = dplyr::case_when(grepl("_S", term_diff) ~ "Self",
+                                                  grepl("_O", term_diff) ~"Other"),
+                      Identity = factor(Identity, levels = c("Self", "Other"))) %>%
+        dplyr::mutate(term_diff = stringr::str_sub(.$term_diff, end = -8)) %>%
+        dplyr::mutate(term_diff = dplyr::case_when(grepl("_GB", term_diff) ~ "Good vs. Bad",
+                                                   grepl("_GN", term_diff) ~"Good vs. Neutral",
+                                                   grepl("_BN", term_diff) ~ "Bad vs. Neutral"),
+                      term_diff = factor(term_diff, levels = c("Good vs. Bad", "Good vs. Neutral", "Bad vs. Neutral"))) %>%
+        # dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
+        dplyr::rename(conditions = term_diff) %>%
+        ggplot2::ggplot(aes(x = value, y = fct_rev(conditions), fill = stat(x < 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('skyblue', 'gray80'),
+                    breaks = c(TRUE, FALSE),
+                    name = "Effect" , labels = c("Yes", "No")) + 
+        # scale_fill_manual(values = c('gray80', 'skyblue')) +
+        labs(x = expression("Self-referential effect on RTs "),
+             y = expression("Contrasts")) + 
+        facet_wrap( ~ Identity, nrow = 1)
+
+p_exp4b_rt_diff_id <- df_exp4b_m1_plot_rt_diff %>%
+        dplyr::filter(str_detect(term_diff, '_SO_')) %>%
+        dplyr::mutate(term_diff = dplyr::case_when(grepl("_B", term_diff) ~ "Bad",
+                                                   grepl("_N", term_diff) ~"Neutral",
+                                                   grepl("_G", term_diff) ~ "Good"),
+                      term_diff = factor(term_diff, levels = c("Good", "Neutral", "Bad"))) %>%
+        # dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+        # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
+        # dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
+        dplyr::rename(conditions = term_diff) %>%
+        ggplot2::ggplot(aes(x = value, y = fct_rev(conditions), fill = stat(x < 0))) +
+        tidybayes::stat_halfeye() +
+        geom_vline(xintercept = 0, linetype = "dashed") +
+        scale_fill_manual(values = c('skyblue', 'gray80'),
+                    breaks = c(TRUE, FALSE),
+                    name = "Effect" , labels = c("Yes", "No")) + 
+        # scale_fill_manual(values = c('skyblue')) +   # note: only one value here, used blue here
+        labs(x = expression("Self-referential effect on RTs "),
+             y = expression("Contrasts (Self vs. Other)"))
+
+```
+
+```{r plot-exp4b-BGLM, fig.cap="exp4a: Results of Bayesian GLM analysis.",  fig.height=9, fig.width=12, warning=FALSE}
+library(patchwork)
+p1 <- p_exp4b_rt1 + exp4b_sdt_p + plot_annotation(tag_levels = 'A')  + plot_layout(nrow = 1, byrow = FALSE, guides = "collect") 
+p2 <- p_exp4b_rt_diff_val + p_exp4b_dprime1_diff_val + plot_layout(nrow = 1, byrow = FALSE, guides = "collect") 
+p3 <- p_exp4b_rt_diff_id + p_exp4b_dprime1_diff_id + plot_layout(nrow = 1, byrow = FALSE, guides = "collect") 
+
+p1/ 
+        p2/ 
+        p3 +  plot_layout(nrow = 3) 
+```
+
+For the task relevant part, we found shapes associated with good person conditions were performed better than other-related conditions, on both *d* prime and reaction times.
+
+Most importantly, we found evidence, that task-irrelevant self-relevance also played an role. For shapes associated with good person, the *d* prime was greater when shapes had an "self" inside as task-irrelevant stimuli than with "other" inside () or bad self (), but this effect did not happen whent the target shape where associated with "neutral" or "bad" person. The same trend appear for the RT data. See Figure \@ref(fig:plot-exp4b-BGLM).
 
 # Results
 ```{r first meta,echo=FALSE, results='hide', eval=FALSE}
